# SolanaSecToolkit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY_CHECKS.md  scsec.toml.example  solsec-results  solsec.toml.example
.cursor/rules/: rules.mdc
.github/workflows/: ci.yml
docs/: CHANGELOG.md  CONTRIBUTING.md
examples/: README.md  examples-security-report.html  security-report.html  security-report.json  solsec.toml.example  updated-examples-report.html
examples/integer_overflow/: secure.rs  vulnerable.rs
examples/missing_signer_check/: secure.rs  vulnerable.rs
examples/reentrancy/: secure.rs  vulnerable.rs
examples/unchecked_account/: secure.rs  vulnerable.rs
scripts/: README.md  run-tests.sh  update-version.sh
src/: analyzer.rs  cli.rs  fuzz.rs  lib.rs  main.rs  plugin.rs  report.rs
ui/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.tsx
